# compound-splitter

./: .flake8  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  format_noun_table_for_testing.py  mypy.ini  prepare.py  pyproject.toml  requirements.txt  retrieve.py  setup.py  socket_server.py  splitter.py
.github/workflows/: test.yml
compound_splitter/: api_web.py  evaluate.py  socket_server.py  splitter.py
methods/: README.md
methods/compound-splitter-nl/: __init__.py  run.json
methods/mcs/: __init__.py  run.json
methods/never/: __init__.py  run.json
methods/none/: run.json
methods/secos/: __init__.py  run.json
test_sets/: example.csv
tests/: example.csv  score_tests.csv  test_evaluate.py
